--- a/src/styles/directives/tip.css
+++ b/src/styles/directives/tip.css
@@ -36,7 +36,7 @@
 
 .tip__info {
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   top: 50%;
   left: 50%;
 
